# Yoshis_Wrath

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/schemas/: sprite_schema.json
assets/sprites/: weapon_fist.json
include/core/: application.h
include/game/: bsp.h  camera.h  game_state.h  level.h
include/platform/: file_system.h  input.h
include/rendering/: base_sprite.h  billboard_sprite.h  floor_ceiling_renderer.h  hud.h  hud_sprite.h  renderer.h  sector_renderer.h  texture_atlas.h  wall_renderer.h  weapon_sprite.h
include/rendering/animation/: animation_controller.h
include/rendering/core/: renderer.h
include/rendering/scene/: floor_ceiling_renderer.h  sector_renderer.h  wall_renderer.h
include/rendering/sprites/: base_sprite.h  billboard_sprite.h  hud_sprite.h  sprite.h  weapon_sprite.h
include/rendering/textures/: texture_manager.h
src/: main.cpp
src/core/: application.cpp
src/game/: bsp.cpp  camera.cpp  game_state.cpp  level.cpp
src/platform/: file_system.cpp  input.cpp
src/rendering/: animation_controller.cpp  base_sprite.cpp  billboard_sprite.cpp  floor_ceiling_renderer.cpp  hud.cpp  hud_sprite.cpp  renderer.cpp  sector_renderer.cpp  texture_atlas.cpp  texture_manager.cpp  wall_renderer.cpp  weapon_sprite.cpp
src/rendering/animation/: animation_controller.cpp
src/rendering/core/: hud.cpp  renderer.cpp
src/rendering/scene/: floor_ceiling_renderer.cpp  sector_renderer.cpp  wall_renderer.cpp
src/rendering/sprites/: base_sprite.cpp  billboard_sprite.cpp  hud_sprite.cpp  weapon_sprite.cpp
src/rendering/textures/: texture_atlas.cpp  texture_manager.cpp
